Fix footer for IE. Flex uses an unexpected default for flex For more details see: https://stackoverflow.com/a/31800080

--- a/src/shared/base/body.css
+++ b/src/shared/base/body.css
@@ -22,7 +22,7 @@ body {
 
   /* For sticky footer */
   & main {
-    flex: 1;
+    flex: 1 0 auto;
   }
 }
 
